fix body margin make content-wrapper alwaays have scrollbar

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -53,8 +53,6 @@ body {
 	background-color: #F6F6F4;
 	padding: 0;
 	color: #2d2d2d;
-	margin: 0 0 20px 0;
-	/*font-size: 12px;*/
 	font-family:  Sans-serif, 'Open Sans', 'Droid-Naskh';
 }
 
